Complete hero and stats section and add icon images

--- a/style.css
+++ b/style.css
@@ -13,6 +13,22 @@ p {
 	margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4 {
+	color: rgb(32, 34, 35);
+}
+
+p {
+	color: rgb(92, 95, 98);
+}
+
+strong {
+	font-weight: 600;
+	color: #000;
+}
+
 a {
 	text-decoration: none;
 	color: inherit;
@@ -73,12 +89,15 @@ button {
 
 nav {
 	margin: 0 5rem;
+	position: fixed;
+	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	font-size: 14px;
 	/* color: #d7d7db; */
 	color: #5c5f62;
+	background: #fff;
 }
 
 nav ul {
@@ -87,6 +106,10 @@ nav ul {
 
 nav ul li:hover {
 	color: #202223;
+}
+
+main p a {
+	text-decoration: underline;
 }
 
 .header__navigation-left,
@@ -110,22 +133,22 @@ nav ul li:hover {
 .search-bar__container .search-bar__prefix {
 	width: 1.125rem;
 	height: 1.125rem;
-	color: #6D7175;
+	color: #6d7175;
 }
 
 .search-bar__container .search-bar__suffix {
 	padding: 0px 6px;
-	border: 1px solid #6D7175;
+	border: 1px solid #6d7175;
 	border-radius: 4px;
 	font-size: 12px;
-	color: #6D7175;
+	color: #6d7175;
 }
 
 .search-bar__container input {
 	border: none;
 	margin-left: 4px;
 	width: 80px;
-	color: #6D7175;
+	color: #6d7175;
 }
 
 .search-bar__container input::placeholder {
@@ -146,7 +169,130 @@ nav ul li:hover {
 	height: 1.25rem;
 }
 
-/* .main__heading {
-	font-size: 2.5em;
+.hero__heading {
+	margin-bottom: 1.5rem;
+	font-size: 3rem;
+	font-weight: 800;
 	line-height: 1.25;
-} */
+	letter-spacing: -1.35px;
+}
+
+.hero__description {
+	margin-bottom: 3rem;
+	font-size: 18px;
+}
+
+.hero {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 5rem;
+}
+
+.hero__content {
+	padding: 7.5rem 0 0 4rem;
+	max-width: 660px;
+	justify-self: end;
+}
+
+.hero__content p a {
+	text-decoration-line: underline;
+}
+
+.hero__content a:hover {
+	text-decoration-line: none;
+}
+
+.hero__content h3 {
+	margin-bottom: 0.825rem;
+	font-size: 20px;
+	font-weight: 600;
+}
+
+.gutter-bottom {
+	margin-bottom: 1.8rem;
+}
+
+.hero-links__container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 1.4rem;
+}
+
+.docs-card {
+	padding: 1rem;
+	border: 1px solid #d2d5d8;
+	border-radius: 8px;
+	display: flex;
+	align-items: center;
+	background-color: #fafbfb;
+	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+	transition: transform 125ms ease-in-out, box-shadow 125ms ease-in-out;
+}
+
+.docs-card:hover {
+	transform: translateY(-2px);
+	box-shadow: 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.docs-card__title {
+	margin-left: 0.75rem;
+	font-size: 20px;
+	font-weight: 600;
+	color: inherit;
+}
+
+.hero__illustration {
+	flex: 1.5;
+	background: url('https://cdn.shopify.com/shopifycloud/shopify_dev/assets/home/halloween/hero-1-2x-b0a493fe272b53baf44c27c7ff169ae2b563e346e46325262ca364c61c6cdd01.png');
+	background-repeat: no-repeat;
+	background-size: auto 1128px;
+	min-height: 1128px;
+}
+
+.docs-banner {
+	padding: 4rem 0;
+	border-radius: 1rem;
+	margin: 5rem 1.4rem 0;
+	background-color: #eafaf3;
+}
+
+.docs-banner__container {
+	margin: 0 auto;
+	max-width: 1268px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	place-items: center end;
+}
+
+.docs-banner__container h3 {
+	margin-bottom: 1rem;
+	font-weight: 600;
+}
+
+.docs-banner__title {
+	font-size: 2rem;
+	line-height: 40px;
+	font-weight: 600;
+}
+
+.stats-box__container {
+	padding: 3rem 4rem;
+	border: 4px solid #000;
+	margin: 0;
+	background-color: #fff;
+	box-shadow: 9px 9px 0 0 rgb(0, 0, 0);
+}
+
+.stats-box__row {
+	display: flex;
+	align-items: center;
+}
+
+.stats-box__row:not(:last-child) {
+	margin-bottom: 1.75rem;
+}
+
+.stats-box__row p {
+	margin-left: 1.5rem;
+	width: 13rem;
+}
